{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 42,
  "lineage": "6b5fa8e0-5970-b966-fa7a-208318388414",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-061f9ec948f1eaabd",
            "tags": {
              "Name": "ssm_ec2_egress_gateway"
            },
            "tags_all": {
              "Name": "ssm_ec2_egress_gateway"
            },
            "vpc_id": "vpc-02913833d89bd5823"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:464858727777:instance/i-049f0d7361fb83810",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_ec2_ec2_profile",
            "id": "i-049f0d7361fb83810",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f18:7686:cc01:6d1e:bed:8647:b634"
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9c1a5dc6aca86d0",
            "private_dns": "ip-10-0-1-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-053e8fc0fa1181f16",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-021d149fae2190881",
              "sg-0918cef0b0c6c7351"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e97d7b12a153b20",
            "tags": {
              "Name": "ssm_ec2_instance"
            },
            "tags_all": {
              "Name": "ssm_ec2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021d149fae2190881",
              "sg-0918cef0b0c6c7351"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.egress_endpoint_sg",
            "aws_security_group.ssm_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_ipv6_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-061f9ec948f1eaabd",
            "gateway_id": "",
            "id": "r-rtb-0b82c310cdeb12dc12750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b82c310cdeb12dc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.main",
            "aws_route_table.private_route_table",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464858727777:route-table/rtb-0b82c310cdeb12dc1",
            "id": "rtb-0b82c310cdeb12dc1",
            "owner_id": "464858727777",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ssm_ec2_private_route_table"
            },
            "tags_all": {
              "Name": "ssm_ec2_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02913833d89bd5823"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bdf467a165ce9ce",
            "route_table_id": "rtb-0b82c310cdeb12dc1",
            "subnet_id": "subnet-06e97d7b12a153b20"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464858727777:security-group/sg-0918cef0b0c6c7351",
            "description": "Allow traffic from egress endpoint",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0918cef0b0c6c7351",
            "ingress": [],
            "name": "Allow egress endpoint",
            "name_prefix": "",
            "owner_id": "464858727777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssm_ec2_egress_sg"
            },
            "tags_all": {
              "Name": "ssm_ec2_egress_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02913833d89bd5823"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464858727777:security-group/sg-021d149fae2190881",
            "description": "allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow outbound traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-021d149fae2190881",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Enable access for ssm endpoint.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "endpoint_access",
            "name_prefix": "",
            "owner_id": "464858727777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssm_ec2_ssm_sg"
            },
            "tags_all": {
              "Name": "ssm_ec2_ssm_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02913833d89bd5823"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464858727777:subnet/subnet-06e97d7b12a153b20",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e97d7b12a153b20",
            "ipv6_cidr_block": "2600:1f18:7686:cc01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-07efb4bdbd2fcc42d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464858727777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ssm_ec2_subnet"
            },
            "tags_all": {
              "Name": "ssm_ec2_subnet"
            },
            "vpc_id": "vpc-02913833d89bd5823"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464858727777:vpc/vpc-02913833d89bd5823",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ebbb8f41f3886240",
            "default_route_table_id": "rtb-008daaa2adae2414a",
            "default_security_group_id": "sg-01e14e1e58629e225",
            "dhcp_options_id": "dopt-098204cd203ee45aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02913833d89bd5823",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-09dc7ed21cabd1f2f",
            "ipv6_cidr_block": "2600:1f18:7686:cc00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-008daaa2adae2414a",
            "owner_id": "464858727777",
            "tags": {
              "Name": "ssm_ec2_vpc"
            },
            "tags_all": {
              "Name": "ssm_ec2_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464858727777:vpc-endpoint/vpce-07933b79f294aa64d",
            "dns_entry": [
              {
                "dns_name": "vpce-07933b79f294aa64d-ey0jdh4p.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07933b79f294aa64d-ey0jdh4p-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0751502SUCMUG4CNYAH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07933b79f294aa64d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a17a2f8325480241"
            ],
            "owner_id": "464858727777",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-021d149fae2190881"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.78",
                "ipv6": "2600:1f18:7686:cc01:e766:c017:918f:5bae",
                "subnet_id": "subnet-06e97d7b12a153b20"
              }
            ],
            "subnet_ids": [
              "subnet-06e97d7b12a153b20"
            ],
            "tags": {
              "Name": "ssm_ec2_ec2messages_endpoint"
            },
            "tags_all": {
              "Name": "ssm_ec2_ec2messages_endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02913833d89bd5823"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssm_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464858727777:vpc-endpoint/vpce-03f123bf07d119bff",
            "dns_entry": [
              {
                "dns_name": "vpce-03f123bf07d119bff-5z9ql6pb.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03f123bf07d119bff-5z9ql6pb-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07504592OKSNL2EBNW3F"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03f123bf07d119bff",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-031f878822fa5bfdf"
            ],
            "owner_id": "464858727777",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-021d149fae2190881"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.35",
                "ipv6": "2600:1f18:7686:cc01:7beb:6e06:265b:77cd",
                "subnet_id": "subnet-06e97d7b12a153b20"
              }
            ],
            "subnet_ids": [
              "subnet-06e97d7b12a153b20"
            ],
            "tags": {
              "Name": "ssm_ec2_messages_endpoint"
            },
            "tags_all": {
              "Name": "ssm_ec2_messages_endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02913833d89bd5823"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssm_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464858727777:vpc-endpoint/vpce-053a4ab60a068fd13",
            "dns_entry": [
              {
                "dns_name": "vpce-053a4ab60a068fd13-zak6kayz.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-053a4ab60a068fd13-zak6kayz-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02220423G7GXIV9JBI8A"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z0222221793SRC1R7HVX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-053a4ab60a068fd13",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-059ad8e73d303865e"
            ],
            "owner_id": "464858727777",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-021d149fae2190881"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.91",
                "ipv6": "2600:1f18:7686:cc01:b3bc:8aa1:1e76:7469",
                "subnet_id": "subnet-06e97d7b12a153b20"
              }
            ],
            "subnet_ids": [
              "subnet-06e97d7b12a153b20"
            ],
            "tags": {
              "Name": "ssm_ec2_ssm_endpoint"
            },
            "tags_all": {
              "Name": "ssm_ec2_ssm_endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02913833d89bd5823"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssm_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}